1.2.2 (unreleased)
------------------

- CSS fixes [amleczko]


1.2.1 (2013-12-23)
------------------

- enable trac search for CUSTOMER role [amleczko]

1.2 (2013-12-20)
----------------

- refactor popen calls [amleczko]
- fix problem with XML transport [amleczko]

1.1 (2013-09-02)
----------------

- fix problem with proxy in front for xml-rpc [amleczko]
- make sure the dns errors are handled by xmlrpc [amleczko]


1.0 (2013-08-13)
----------------

- Nothing changed yet.